--- a/styles/header-top.css
+++ b/styles/header-top.css
@@ -5,7 +5,7 @@
   top: 0;
   background-color: var(--bg-top);
   height: 75px;
-  box-shadow: 0 5px 10px var(--co-box-shadow);
+  box-shadow: 0 5px 10px var(--co-main-shadow);
   padding: 5px;
 }
 
