--- a/styles/main-index.css
+++ b/styles/main-index.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   display: inline-block;
   background-color: var(--bg-top);
-  box-shadow: 5px 5px 10px var(--co-box-shadow);
+  box-shadow: 5px 5px 10px var(--co-main-shadow);
 }
 .body{
   color: var(--co-text);
@@ -27,7 +27,7 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px var(--co-box-shadow);
+  box-shadow: 5px 5px 10px var(--co-main-shadow);
   width: clamp(200px, 90%, 900px);
   gap: 20px;
   margin-bottom: 20px;
