--- a/styles/vars.css
+++ b/styles/vars.css
@@ -12,8 +12,9 @@
     --co-box-shadow: rgba(0, 0, 0, 0.24);
     --co-box-shadow-str: rgba(0, 0, 0, 0.596);
     --kleingedrucktes: rgb(185, 185, 185);
-    --co-green: rgb(0, 177, 0);
-    --co-green-mod: rgb(0, 150, 0);
+    --co-green: rgb(26, 201, 26);
+    --co-green-mod: rgb(0, 179, 0);
+    --co-overlay: rgba(43, 49, 51, 0.781);
 }
 
 @media (prefers-color-scheme: light) {
@@ -22,7 +23,7 @@
         --bg-top: rgb(255, 255, 255);
         --bg-hover: rgb(211, 211, 211);
         --bg-active: rgb(158, 158, 158);
-        --trennstrich: rgb(149, 149, 150);
+        --trennstrich: rgb(211, 211, 211);
         --co-active: rgb(99, 99, 99);
         --co-text: black;
         --co-text-invers: white;
@@ -30,6 +31,7 @@
         --co-box-shadow: rgba(0, 0, 0, 0.24);
         --kleingedrucktes: rgb(185, 185, 185);
         --co-box-shadow-str: rgba(0, 0, 0, 0.438);
-
+        --kleingedrucktes: rgb(122, 122, 122);
+        --co-overlay: rgba(255, 255, 255, 0.747);
     }
 }
