--- a/styles/template-thumbnail.css
+++ b/styles/template-thumbnail.css
@@ -97,3 +97,17 @@
   margin-bottom: 5px;
   font-family: Roboto, Arial;
 }
+
+.proj-video-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.proj-video-container iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
