links und kontakt

--- a/styles/header-top.css
+++ b/styles/header-top.css
@@ -89,6 +89,16 @@
   background-color: var(--bg-active);
 }
 
+.header-social-link-active{
+  color: var(--co-active);
+  font-size: 18pt;
+  flex: 1;
+  margin-right: 10px;
+  padding: 3px;
+  border-radius: 5px;
+  transition: 0.15s;
+}
+
 .menue-button{
   background: none;
   border: none;
