inhalt init fertig

--- a/styles/tags.css
+++ b/styles/tags.css
@@ -11,3 +11,12 @@
 .tag-artenschutz{
     color: rgb(185, 23, 123);
 }
+.tag-exkursion{
+    color: rgb(8, 129, 235);
+}
+.tag-mitmach{
+    color: rgb(255, 200, 0);
+}
+.tag-spende{
+    color: rgb(203, 47, 47);
+}
